can product added.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,9 @@
 {
   "TokenOptions": {
-    "Audience": "mehmet@mehmet.com",
-    "Issuer": "mehmet@mehmet.com",
+    "Audience": "www.engin.com",
+    "Issuer": "www.engin.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey": "mysupersecretkeymysupersecretkey"
+    "SecurityKey": "mysecretkeymysecretkey"
   },
   "Logging": {
     "LogLevel": {
